about page formatted, alignment issues fixed

--- a/css/index.css
+++ b/css/index.css
@@ -209,23 +209,27 @@ div .about-page{
     justify-content: center;
 }
 .top-about{
-    padding: 20px 0 20px 0;
-    border-bottom: 1px dotted black;
+    padding: 20px 4% 20px 4%;
+    border-bottom: 1.5px dashed black;
+    width:;
 }
 .about-row{
-    padding: 20px;
+    padding: 20px 0 20px 0;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
+    width: 100%;
+    margin:;
 }
 .about-column{
+    width: 46%;
     display: flex;
     flex-direction: column;
-    margin: 20px;
-    padding: 20px 20px 20px 40pxs;
-    border-bottom: 1px dotted black;
+    border-bottom: 1.5px dashed black;
 }
 .about-column img{
-    margin-right: 30px;
+    width: 100%;
+    height: auto;
+    margin-right:;
 }
 h2.about-h2{
     margin: 20px 0 20px 0;
@@ -236,10 +240,11 @@ h2.about-h2{
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 2px solid black;
+    border: 1.5px solid black;
     border-radius: 10px;
     margin: 20px 0 20px 0;
 }
 .bottom-about{
-    padding: 20px;
+    padding: 20px 4% 20px 4%;
+    width: 100%;
 }
